[gd_scene load_steps=33 format=3 uid="uid://cx5i4c878yc5l"]

[ext_resource type="Script" uid="uid://bpsb13swbgnvm" path="res://Enemies/Bosses/VortexBoss/VortexBoss.gd" id="1_2o1uo"]
[ext_resource type="Shader" uid="uid://dwghdraj33xr7" path="res://Enemies/shader/SwirlingVortex.gdshader" id="2_8skvg"]
[ext_resource type="Shader" uid="uid://c5xnutdco3shf" path="res://Enemies/shader/SoftGlowCircle.gdshader" id="2_kf5tc"]
[ext_resource type="PackedScene" uid="uid://c0le87t8h8pka" path="res://Enemies/Bosses/boss_damage_area.tscn" id="2_wisd0"]
[ext_resource type="Texture2D" uid="uid://42mbtb8vie6d" path="res://Enemies/Bosses/assets/485.png" id="3_gjbgx"]
[ext_resource type="Texture2D" uid="uid://dcsmh7q1yuhlx" path="res://Enemies/Bosses/VortexBoss/assets/Crack.webp" id="3_kf5tc"]
[ext_resource type="AudioStream" uid="uid://ckbl3kr7q65xo" path="res://Enemies/Bosses/assets/explosion.ogg" id="4_8skvg"]
[ext_resource type="AudioStream" uid="uid://df4cne70p0akt" path="res://Enemies/Bosses/VortexBoss/assets/SpawnBlackhole1.ogg" id="8_45luj"]
[ext_resource type="AudioStream" uid="uid://jmd3sayisvvi" path="res://Enemies/Bosses/VortexBoss/assets/SpawnBlackhole2.ogg" id="9_e1c0n"]
[ext_resource type="AudioStream" uid="uid://8xn6o7xiwefl" path="res://Enemies/Bosses/VortexBoss/assets/SpawnBlackhole3.ogg" id="10_4s5c4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ub2fx"]
shader = ExtResource("2_8skvg")
shader_parameter/portal_texture = ExtResource("3_kf5tc")
shader_parameter/portal_tint = Color(0.0784314, 0.0784314, 0.0784314, 1)
shader_parameter/vortex_effect_radius = 0.5
shader_parameter/twist_strength = 3.0
shader_parameter/pulsation_speed = 0.7
shader_parameter/breath_magnitude = -1.86265e-08
shader_parameter/overall_rotation_speed = 1.0
shader_parameter/texture_scroll_speed_x = -2.2352e-08
shader_parameter/texture_scroll_speed_y = -2.2352e-08
shader_parameter/edge_softness = 0.3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8skvg"]
shader = ExtResource("2_kf5tc")
shader_parameter/circle_color = Color(0.0392157, 0.0392157, 0.0392157, 1)
shader_parameter/radius = 0.48
shader_parameter/edge_softness = 0.15
shader_parameter/glow_color = Color(0.0784314, 0.0784314, 0.0784314, 0.745098)
shader_parameter/glow_radius = 0.51
shader_parameter/glow_edge_softness = 0.1

[sub_resource type="Animation" id="Animation_kf5tc"]
resource_name = "Move"
length = 15.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5, 10, 15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(200, 200), Vector2(200, 200), Vector2(880, 200), Vector2(880, 200)]
}

[sub_resource type="Animation" id="Animation_vb6c8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(520, -360)]
}

[sub_resource type="Animation" id="Animation_gparn"]
resource_name = "ShowSelf"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(520, -360), Vector2(200, 200)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MoveAnimation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"Move", -1, 1.0, false],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6xpv8"]
_data = {
&"Move": SubResource("Animation_kf5tc"),
&"RESET": SubResource("Animation_vb6c8"),
&"ShowSelf": SubResource("Animation_gparn")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_kf5tc"]
radius = 242.57

[sub_resource type="CircleShape2D" id="CircleShape2D_ub2fx"]
radius = 341.676

[sub_resource type="AtlasTexture" id="AtlasTexture_8skvg"]
atlas = ExtResource("3_gjbgx")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kf5tc"]
atlas = ExtResource("3_gjbgx")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub2fx"]
atlas = ExtResource("3_gjbgx")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ottml"]
atlas = ExtResource("3_gjbgx")
region = Rect2(192, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax41h"]
atlas = ExtResource("3_gjbgx")
region = Rect2(256, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y60g"]
atlas = ExtResource("3_gjbgx")
region = Rect2(320, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3nrl"]
atlas = ExtResource("3_gjbgx")
region = Rect2(384, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhysd"]
atlas = ExtResource("3_gjbgx")
region = Rect2(448, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7i2a"]
atlas = ExtResource("3_gjbgx")
region = Rect2(512, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul0tb"]
atlas = ExtResource("3_gjbgx")
region = Rect2(576, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys1ci"]
atlas = ExtResource("3_gjbgx")
region = Rect2(640, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqoam"]
atlas = ExtResource("3_gjbgx")
region = Rect2(704, 448, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ottml"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8skvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kf5tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub2fx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ottml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax41h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y60g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3nrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhysd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7i2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul0tb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys1ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqoam")
}],
"loop": false,
"name": &"destroyed",
"speed": 10.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_wsix4"]
playback_mode = 1
random_pitch = 1.3
random_volume_offset_db = 5.0
streams_count = 3
stream_0/stream = ExtResource("8_45luj")
stream_1/stream = ExtResource("9_e1c0n")
stream_2/stream = ExtResource("10_4s5c4")

[node name="VortexBoss" type="CharacterBody2D" groups=["Boss", "Enemy"]]
z_index = 1
position = Vector2(520, -360)
collision_layer = 2
collision_mask = 0
motion_mode = 1
script = ExtResource("1_2o1uo")

[node name="BodySprite" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ub2fx")
custom_minimum_size = Vector2(700, 700)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -560.0
offset_top = -554.0
offset_right = 360.0
offset_bottom = 366.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)

[node name="BlackHole" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_8skvg")
custom_minimum_size = Vector2(700, 700)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -350.0
offset_right = 350.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="MoveAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6xpv8")
}
autoplay = "ShowSelf"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.2, 1.2)
shape = SubResource("CircleShape2D_kf5tc")

[node name="BossDamageArea" parent="." instance=ExtResource("2_wisd0")]
scale = Vector2(1.2, 1.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossDamageArea"]
shape = SubResource("CircleShape2D_ub2fx")

[node name="ExplosionAnim" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_ottml")
animation = &"destroyed"

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8skvg")
bus = &"efx"

[node name="SpawnSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_wsix4")
bus = &"efx"

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="animation_finished" from="ExplosionAnim" to="." method="_on_explosion_anim_animation_finished"]
[connection signal="timeout" from="ShootCooldown" to="." method="_on_shoot_cooldown_timeout"]
